# Ascend-msmonitor

./: .gitmodules  CONTRIBUTING.md  README.md
docs/zh/: dir_structure.md  dyno_instruct.md  dynolog_instruct.md  faq.md  install_guide.md  mindspore_adapter_instruct.md  mindstudio_monitor_api_reference.md  mindstudio_vulnerability_handling_procedure.md  monitor_feature.md  npumonitor_instruct.md  nputrace_instruct.md  overview.md  public_ip_address.md  quick_start.md  release_notes.md  security_statement.md
docs/zh/advanced_features/: mindstudio_monitor_api_reference.md  monitor_feature.md
docs/zh/design/: MindStudio26.0.0msMonitor特性分析与设计说明书.md
docs/zh/developer_guide/: development_guide.md
docs/zh/getting_started/: install_guide.md  quick_start.md
docs/zh/legal/: mindstudio_vulnerability_handling_procedure.md  public_ip_address.md  security_statement.md
docs/zh/user_guide/: dyno_instruct.md  dynolog_instruct.md  mindspore_adapter_instruct.md  npumonitor_instruct.md  nputrace_instruct.md
dynolog_npu/cli/: Cargo.toml
dynolog_npu/cli/src/: main.rs
dynolog_npu/cli/src/commands/: npumonitor.rs  nputrace.rs  path.rs
dynolog_npu/cmake/: Findopenssl.cmake
dynolog_npu/dynolog/src/: CMakeLists.txt  utils.cpp  utils.h
dynolog_npu/scripts/debian/: make_deb.sh
dynolog_npu/scripts/rpm/: make_rpm.sh
plugin/: CMakeLists.txt  README.md  bindings.cpp  build.sh  setup.py
plugin/IPCMonitor/: _ipcmonitor_C.py  dynamic_monitor_proxy.py  file_manager.py  monitor.py
plugin/cmake/: Findglog.cmake
plugin/ipc_monitor/: DynoLogNpuMonitor.cpp  DynoLogNpuMonitor.h  InputParser.cpp  InputParser.h  NpuIpcClient.cpp  PyDynamicMonitorProxy.h  TimerTask.h
plugin/ipc_monitor/db/: DBProcessManager.cpp  DBProcessManager.h  DataBase.cpp
plugin/ipc_monitor/jsonl/: JsonlDataDumper.cpp  JsonlProcessManager.cpp  RotateLogger.cpp  RotateLogger.h
plugin/ipc_monitor/metric/: MetricApiProcess.cpp  MetricApiProcess.h  MetricCommunicationProcess.cpp  MetricCommunicationProcess.h  MetricHcclProcess.cpp  MetricHcclProcess.h  MetricKernelProcess.cpp  MetricKernelProcess.h  MetricManager.cpp  MetricMarkProcess.cpp  MetricMarkProcess.h  MetricMemCpyProcess.cpp  MetricMemCpyProcess.h  MetricMemProcess.cpp  MetricMemProcess.h  MetricMemSetProcess.cpp  MetricMemSetProcess.h
plugin/ipc_monitor/monitor/: ActivityData.h  Monitor.cpp  Monitor.h  MonitorProcessManager.cpp  MonitorProcessManager.h
plugin/ipc_monitor/mspti_monitor/: MsptiMonitor.cpp  MsptiMonitor.h  mspti.h
plugin/ipc_monitor/utils/: utils.cpp  utils.h
scripts/: build.sh  run_presmoke.sh  run_ut.sh
test/: CMakeLists.txt
test/cmake/: Findglog.cmake  Findgoogletest.cmake  Findsqlite3.cmake  config.ini  download_opensource.sh  utils.cmake
test/pre_smoke/: test_ascend_pytorch_profiler_msmonitor_npu_monitor.sh  test_ascend_pytorch_profiler_msmonitor_npu_trace.sh
test/pre_smoke/check_tools/: db_check.py  file_check.py  table_fields.py
test/pre_smoke/src/: dynamic_model_train.py  test_ascend_pytorch_profiler_msmonitor_npu_monitor.py  test_ascend_pytorch_profiler_msmonitor_npu_trace.py
test/ut/plugin/ipc_monitor/: CMakeLists.txt  test_DynoLogNpuMonitor.cpp
(+1 files in other folders)
